--- a/templates/packman_code.html
+++ b/templates/packman_code.html
@@ -1,10 +1,13 @@
 {% extends "base.html" %}
 {% block title %}PackMan Code{% endblock %}
 {% block content %}
-<header class="bg-primary text-white text-center py-3">
+
+
+<header class="custom-header">
     <h1>Code Pack Panel</h1>
 </header>
 <br/><br/>
+
 
 <div class="container">
     <button type="button" class="btn btn-danger" id="backHome">Back</button>
