--- a/templates/home.html
+++ b/templates/home.html
@@ -1,102 +1,119 @@
 {% extends "base.html" %}
 
-{% block title %}Home{% endblock %}
+{% block title %}Pack Manager{% endblock %}
 
 {% block content %}
-<h1 class="my-4">Welcome</h1>
+
+<h1 class="my-4 text-center fade-in shadow-text">Pack Manager</h1>
 <br/>
 <br/>
-<button type="button" id="backHome" class="btn btn-danger">Back to Home</button>
+<div class="text-center fade-in">
+    <button type="button" id="backHome" class="btn btn-danger">Back to SourceBox</button>
+</div>
 
 {% if 'access_token' not in session %}
-    <a href="{{ url_for('register') }}" class="btn btn-primary">Register</a>
-    <a href="{{ url_for('login') }}" class="btn btn-secondary">Login</a>
+    <div class="text-center mt-3 fade-in">
+        <a href="{{ url_for('register') }}" class="btn btn-primary">Register</a>
+        <a href="{{ url_for('login') }}" class="btn btn-secondary">Login</a>
+    </div>
 {% endif %}
 
 {% if 'access_token' in session %}
-    <div class="container">
+    <div class="container fade-in">
         <br/>
         <br/>
-        <h2>Available Packs</h2>
-        <br/>
-        {% if packs %}
-            <div class="accordion" id="packsAccordion">
-                {% for pack in packs %}
-                    <div class="accordion-item">
-                        <h2 class="accordion-header" id="heading{{ loop.index }}">
-                            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse{{ loop.index }}" aria-expanded="true" aria-controls="collapse{{ loop.index }}">
-                                {{ pack.pack_name }}
-                            </button>
-                        </h2>
-                        <div id="collapse{{ loop.index }}" class="accordion-collapse collapse show" aria-labelledby="heading{{ loop.index }}" data-bs-parent="#packsAccordion">
-                            <div class="accordion-body">
-                                <div class="accordion" id="contentAccordion{{ loop.index }}">
-                                    {% for content in pack.contents %}
-                                        <div class="accordion-item">
-                                            <h2 class="accordion-header" id="headingContent{{ loop.index }}{{ loop.index0 }}">
-                                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseContent{{ loop.index }}{{ loop.index0 }}" aria-expanded="false" aria-controls="collapseContent{{ loop.index }}{{ loop.index0 }}">
-                                                    {% if content.data_type == 'file' %}File: {{ content.filename }}{% else %}Web Content: {% endif %}
-                                                </button>
-                                            </h2>
-                                            <div id="collapseContent{{ loop.index }}{{ loop.index0 }}" class="accordion-collapse collapse" aria-labelledby="headingContent{{ loop.index }}{{ loop.index0 }}" data-bs-parent="#contentAccordion{{ loop.index }}">
-                                                <div class="accordion-body">
-                                                    <p>{{ content.content }}</p>
+        <div class="row justify-content-center">
+            <div class="col-md-5">
+                <h2 class="text-center shadow-text">Available Packs</h2>
+                <br/>
+                {% if packs %}
+                    <div class="accordion" id="packsAccordion">
+                        {% for pack in packs %}
+                            <div class="accordion-item">
+                                <h2 class="accordion-header" id="heading{{ loop.index }}">
+                                    <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse{{ loop.index }}" aria-expanded="true" aria-controls="collapse{{ loop.index }}">
+                                        {{ pack.pack_name }}
+                                    </button>
+                                </h2>
+                                <div id="collapse{{ loop.index }}" class="accordion-collapse collapse show" aria-labelledby="heading{{ loop.index }}" data-bs-parent="#packsAccordion">
+                                    <div class="accordion-body">
+                                        <div class="accordion" id="contentAccordion{{ loop.index }}">
+                                            {% for content in pack.contents %}
+                                                <div class="accordion-item">
+                                                    <h2 class="accordion-header" id="headingContent{{ loop.index }}{{ loop.index0 }}">
+                                                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseContent{{ loop.index }}{{ loop.index0 }}" aria-expanded="false" aria-controls="collapseContent{{ loop.index }}{{ loop.index0 }}">
+                                                            {% if content.data_type == 'file' %}File: {{ content.filename }}{% else %}Web Content: {% endif %}
+                                                        </button>
+                                                    </h2>
+                                                    <div id="collapseContent{{ loop.index }}{{ loop.index0 }}" class="accordion-collapse collapse" aria-labelledby="headingContent{{ loop.index }}{{ loop.index0 }}" data-bs-parent="#contentAccordion{{ loop.index }}">
+                                                        <div class="accordion-body">
+                                                            <p>{{ content.content }}</p>
+                                                        </div>
+                                                    </div>
                                                 </div>
-                                            </div>
+                                            {% endfor %}
                                         </div>
-                                    {% endfor %}
+                                    </div>
                                 </div>
                             </div>
-                        </div>
+                        {% endfor %}
                     </div>
-                {% endfor %}
+                {% else %}
+                    <p class="text-center">No packs available.</p>
+                {% endif %}
+                <div class="text-center mt-3">
+                    <a href="/packman" class="btn btn-primary">Add Pack</a>
+                </div>
             </div>
-        {% else %}
-            <p>No packs available.</p>
-        {% endif %}
-        <br/>
-        <h2>Available Code Packs</h2>
-        <br/>
-        {% if code_packs %}
-            <div class="accordion" id="codePacksAccordion">
-                {% for code_pack in code_packs %}
-                    <div class="accordion-item">
-                        <h2 class="accordion-header" id="headingCode{{ loop.index }}">
-                            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseCode{{ loop.index }}" aria-expanded="true" aria-controls="collapseCode{{ loop.index }}">
-                                {{ code_pack.pack_name }}
-                            </button>
-                        </h2>
-                        <div id="collapseCode{{ loop.index }}" class="accordion-collapse collapse show" aria-labelledby="headingCode{{ loop.index }}" data-bs-parent="#codePacksAccordion">
-                            <div class="accordion-body">
-                                <div class="accordion" id="contentAccordionCode{{ loop.index }}">
-                                    {% for content in code_pack.contents %}
-                                        <div class="accordion-item">
-                                            <h2 class="accordion-header" id="headingContentCode{{ loop.index }}{{ loop.index0 }}">
-                                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseContentCode{{ loop.index }}{{ loop.index0 }}" aria-expanded="false" aria-controls="collapseContentCode{{ loop.index }}{{ loop.index0 }}">
-                                                    {% if content.data_type == 'file' %}File: {{ content.filename }}{% else %}Web Content: {% endif %}
-                                                </button>
-                                            </h2>
-                                            <div id="collapseContentCode{{ loop.index }}{{ loop.index0 }}" class="accordion-collapse collapse" aria-labelledby="headingContentCode{{ loop.index }}{{ loop.index0 }}" data-bs-parent="#contentAccordionCode{{ loop.index }}">
-                                                <div class="accordion-body">
-                                                    <p>{{ content.content }}</p>
+            <div class="col-md-5">
+                <h2 class="text-center shadow-text">Available Code Packs</h2>
+                <br/>
+                {% if code_packs %}
+                    <div class="accordion" id="codePacksAccordion">
+                        {% for code_pack in code_packs %}
+                            <div class="accordion-item">
+                                <h2 class="accordion-header" id="headingCode{{ loop.index }}">
+                                    <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseCode{{ loop.index }}" aria-expanded="true" aria-controls="collapseCode{{ loop.index }}">
+                                        {{ code_pack.pack_name }}
+                                    </button>
+                                </h2>
+                                <div id="collapseCode{{ loop.index }}" class="accordion-collapse collapse show" aria-labelledby="headingCode{{ loop.index }}" data-bs-parent="#codePacksAccordion">
+                                    <div class="accordion-body">
+                                        <div class="accordion" id="contentAccordionCode{{ loop.index }}">
+                                            {% for content in code_pack.contents %}
+                                                <div class="accordion-item">
+                                                    <h2 class="accordion-header" id="headingContentCode{{ loop.index }}{{ loop.index0 }}">
+                                                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseContentCode{{ loop.index }}{{ loop.index0 }}" aria-expanded="false" aria-controls="collapseContentCode{{ loop.index }}{{ loop.index0 }}">
+                                                            {% if content.data_type == 'file' %}File: {{ content.filename }}{% else %}Web Content: {% endif %}
+                                                        </button>
+                                                    </h2>
+                                                    <div id="collapseContentCode{{ loop.index }}{{ loop.index0 }}" class="accordion-collapse collapse" aria-labelledby="headingContentCode{{ loop.index }}{{ loop.index0 }}" data-bs-parent="#contentAccordionCode{{ loop.index }}">
+                                                        <div class="accordion-body">
+                                                            <p>{{ content.content }}</p>
+                                                        </div>
+                                                    </div>
                                                 </div>
-                                            </div>
+                                            {% endfor %}
                                         </div>
-                                    {% endfor %}
+                                    </div>
                                 </div>
                             </div>
-                        </div>
+                        {% endfor %}
                     </div>
-                {% endfor %}
+                {% else %}
+                    <p class="text-center">No code packs available.</p>
+                {% endif %}
+                <div class="text-center mt-3">
+                    <a href="/packman-code" class="btn btn-primary">Add Code Pack</a>
+                </div>
             </div>
-        {% else %}
-            <p>No code packs available.</p>
-        {% endif %}
+        </div>
         <br/>
-        <a href="/packman" class="btn btn-primary">Add Pack</a>
-        <a href="/packman-code" class="btn btn-primary">Add Code Pack</a>
-        <a href="/del-pack" class="btn btn-danger">Delete Pack</a>
-        <br/>
+        <div class="row">
+            <div class="col-md-12 text-center">
+                <a href="/del-pack" class="btn btn-danger btn-lg w-50 mt-5">Delete Pack</a>
+            </div>
+        </div>
         <br/>
     </div>
 {% endif %}
