--- a/templates/packman.html
+++ b/templates/packman.html
@@ -1,11 +1,15 @@
 {% extends "base.html" %}
 {% block title %}PackMan{% endblock %}
 {% block content %}
-<header class="bg-primary text-white text-center py-3">
+
+
+
+<header class="custom-header">
     <h1>Pack Panel</h1>
 </header>
 <br/>
 <br/>
+
 
 <div class="container">
     <button type="button" class="btn btn-danger" id="backHome">Back</button>
